// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransformOktaVerifyEnrollPoll Tests Setup OV button should use APP_LINK challenge method when selectedChannel is samedevice and platform is android 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
              {
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.customUri.makeSureHaveOVToContinue",
                },
                "type": "Description",
                "viewIndex": 5,
              },
              {
                "options": {
                  "alignment": "center",
                  "altText": "enroll.oda.step3",
                  "dataSe": "app-store-link",
                  "href": "https://apps.test.com/us/app/okta-verify/id490179405",
                  "marginBlockStart": "20px",
                  "svgIcon": [Function],
                },
                "type": "ImageLink",
                "viewIndex": 5,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.customUri.setup",
                },
                "type": "Description",
                "viewIndex": 5,
              },
              {
                "options": {
                  "challengeMethod": "APP_LINK",
                  "href": "www.testSetupUrl.com",
                  "i18nKey": "oie.enroll.okta_verify.setup.title",
                  "step": "",
                },
                "type": "OpenOktaVerifyFPButton",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_sameDeviceOVEnrollment",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollPoll Tests should add Stepper elements when selectedChannel is devicebootstrap 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.openOv.suchAs",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.selectAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.addAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.openOv.suchAs",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.selectAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.addAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.openOv.suchAs",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.selectAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.addAccount",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_devicebootstrap",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollPoll Tests should add Stepper elements when selectedChannel is qrcode and canResend = true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
              {
                "options": {
                  "data": "#mockQrCode",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              {
                "label": "enroll.totp.cannotScan",
                "options": {
                  "ariaLabel": "enroll.totp.aria.cannotScan",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "Button",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_qrcode",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollPoll Tests should add Stepper elements when selectedChannel is samedevice 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "enroll.oda.without.account.step1",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.openOv",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.signInUrl",
                          },
                          "type": "Description",
                        },
                        {
                          "noMargin": true,
                          "options": {
                            "content": "<span class="strong no-translate">okta.okta.com</span>",
                          },
                          "type": "Description",
                        },
                        {
                          "label": "enroll.oda.org.copyLink",
                          "options": {
                            "onClick": [Function],
                            "step": "",
                            "type": "button",
                            "variant": "secondary",
                          },
                          "type": "Button",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "enroll.oda.without.account.step1",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.openOv",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.signInUrl",
                          },
                          "type": "Description",
                        },
                        {
                          "noMargin": true,
                          "options": {
                            "content": "<span class="strong no-translate">okta.okta.com</span>",
                          },
                          "type": "Description",
                        },
                        {
                          "label": "enroll.oda.org.copyLink",
                          "options": {
                            "onClick": [Function],
                            "step": "",
                            "type": "button",
                            "variant": "secondary",
                          },
                          "type": "Button",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "enroll.oda.without.account.step1",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.openOv",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.signInUrl",
                          },
                          "type": "Description",
                        },
                        {
                          "noMargin": true,
                          "options": {
                            "content": "<span class="strong no-translate">okta.okta.com</span>",
                          },
                          "type": "Description",
                        },
                        {
                          "label": "enroll.oda.org.copyLink",
                          "options": {
                            "onClick": [Function],
                            "step": "",
                            "type": "button",
                            "variant": "secondary",
                          },
                          "type": "Button",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                    {
                      "elements": [
                        {
                          "noMargin": true,
                          "options": {
                            "content": "oie.enroll.okta_verify.setup.skipAuth.followInstruction",
                          },
                          "type": "Description",
                        },
                      ],
                      "type": "VerticalLayout",
                    },
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_samedevice",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollPoll Tests should return a channel selection formBag when email is selected channel and canResend = true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.email.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
              {
                "options": {
                  "data": "#mockQrCode",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              {
                "label": "enroll.totp.cannotScan",
                "options": {
                  "ariaLabel": "enroll.totp.aria.cannotScan",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "Button",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.email.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.email.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.email.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.email.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.email.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_email",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollPoll Tests should return a channel selection formBag when sms is selected channel with canResend = true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.sms.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 0,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 0,
              },
              {
                "options": {
                  "data": "#mockQrCode",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              {
                "label": "enroll.totp.cannotScan",
                "options": {
                  "ariaLabel": "enroll.totp.aria.cannotScan",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "Button",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.sms.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.email.info.updated",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 2,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.sms.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 2,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.sms.info.updated",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "content": "oie.enroll.okta_verify.switch.channel.link.text",
                  "contentClassname": "switch-channel-link",
                  "step": "select-enrollment-channel",
                  "stepToRender": "select-enrollment-channel",
                },
                "type": "TextWithActionLink",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 3,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.sms.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.subtitle",
                },
                "type": "Description",
                "viewIndex": 3,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 3,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 3,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 4,
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "content": "oie.enroll.okta_verify.sms.notReceived",
                  "contentClassname": "resend-link",
                  "contentHasHtml": true,
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.subtitle",
                },
                "type": "Description",
                "viewIndex": 4,
              },
              {
                "noMargin": true,
                "options": {
                  "items": [
                    "oie.enroll.okta_verify.qrcode.step1.updated",
                    "oie.enroll.okta_verify.qrcode.step2",
                    "oie.enroll.okta_verify.qrcode.step3.updated",
                  ],
                  "type": "ol",
                },
                "type": "List",
                "viewIndex": 4,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.okta_verify.setup.skipAuth.canBeClosed",
                },
                "type": "Description",
                "viewIndex": 4,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.enroll.okta_verify.setup.sms.title",
                },
                "type": "Title",
                "viewIndex": 5,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "stepper_sms",
        "options": {
          "defaultStepIndex": [Function],
        },
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
